[workspace]
resolver = "2"
members = [
    "node",
    "crates/auto-config",
    "crates/core-primitives",
    "crates/das-primitives",
    "crates/das-rpc",
    "crates/das-network",
    "crates/das-network/protocol",
    "crates/frame-executive-ext",
    "crates/frame-system-ext",
    "crates/melo-erasure-coding",
    "crates/pallet-melo-store",
    "crates/pallet-farmers-fortune",
    "crates/daser",
    "crates/das-db",
    "crates/meloxt",
    "crates/proof-of-space",
    "farmer",
    "light",
    "light/e2e",
    "runtime",
]

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1